// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClayTable should render a ClayTable with a basic schema and grouped items 1`] = `
<div class="table-responsive">
  <table class="table table-autofit table-hover table-list show-quick-actions-on-hover">
    <thead>
      <tr>
        <th class="table-cell-expand">Title</th>
        <th>Director</th>
      </tr>
    </thead>
    <tbody>
      <tr class="table-divider">
        <td colspan="2">Saga</td>
      </tr>
      <tr>
        <td class="table-cell-expand">
          <h4 class="table-list-title">
            <span class="text-truncate-inline">
              <span class="text-truncate">Episode I: The Phantom Menace</span>
            </span>
          </h4>
        </td>
        <td>
          <span class="text-truncate">George Lucas</span>
        </td>
      </tr>
      <tr>
        <td class="table-cell-expand">
          <h4 class="table-list-title">
            <span class="text-truncate-inline">
              <span class="text-truncate">Episode II: Attack of the Clones</span>
            </span>
          </h4>
        </td>
        <td>
          <span class="text-truncate">George Lucas</span>
        </td>
      </tr>
      <tr class="table-divider">
        <td colspan="2">Expanded Universe</td>
      </tr>
      <tr>
        <td class="table-cell-expand">
          <h4 class="table-list-title">
            <span class="text-truncate-inline">
              <span class="text-truncate">Rogue One: A Star Wars Story</span>
            </span>
          </h4>
        </td>
        <td>
          <span class="text-truncate">Gareth Edwards</span>
        </td>
      </tr>
      <tr>
        <td class="table-cell-expand">
          <h4 class="table-list-title">
            <span class="text-truncate-inline">
              <span class="text-truncate">Solo: A Star Wars Story</span>
            </span>
          </h4>
        </td>
        <td>
          <span class="text-truncate">Ron Howard</span>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`ClayTable should render a ClayTable with a basic schema and items 1`] = `
<div class="table-responsive">
  <table class="table table-autofit table-hover table-list show-quick-actions-on-hover">
    <thead>
      <tr>
        <th class="table-cell-expand">Title</th>
        <th>Director</th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td class="table-cell-expand">
          <h4 class="table-list-title">
            <span class="text-truncate-inline">
              <span class="text-truncate">Episode I: The Phantom Menace</span>
            </span>
          </h4>
        </td>
        <td>
          <span class="text-truncate">George Lucas</span>
        </td>
      </tr>
      <tr>
        <td class="table-cell-expand">
          <h4 class="table-list-title">
            <span class="text-truncate-inline">
              <span class="text-truncate">Episode II: Attack of the Clones</span>
            </span>
          </h4>
        </td>
        <td>
          <span class="text-truncate">George Lucas</span>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`ClayTable should render a ClayTable with a basic schema and no items 1`] = `
<div class="table-responsive">
  <table class="table table-autofit table-hover table-list show-quick-actions-on-hover">
    <thead>
      <tr>
        <th class="table-cell-expand">Title</th>
        <th>Director</th>
      </tr>
    </thead>
    <tbody></tbody>
  </table>
</div>
`;

exports[`ClayTable should render a ClayTable with a basic schema with sortable fields and no items 1`] = `
<div class="table-responsive">
  <table class="table table-autofit table-hover table-list show-quick-actions-on-hover">
    <thead>
      <tr>
        <th class="table-cell-expand">
          <button class="btn btn-unstyled" type="button">Title
            <svg aria-hidden="true" class="lexicon-icon lexicon-icon-order-arrow-up">
              <title>order-arrow-up</title>
              <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#order-arrow-up"></use>
            </svg>
          </button>
        </th>
        <th>
          <button class="btn btn-unstyled" type="button">Director</button>
        </th>
        <th>Year</th>
      </tr>
    </thead>
    <tbody></tbody>
  </table>
</div>
`;

exports[`ClayTable should render a ClayTable with an schema with button field and items 1`] = `
<div class="table-responsive">
  <table class="table table-autofit table-hover table-list show-quick-actions-on-hover">
    <thead>
      <tr>
        <th class="table-cell-expand">Title</th>
        <th>Download</th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td class="table-cell-expand">
          <h4 class="table-list-title">
            <span class="text-truncate-inline">
              <span class="text-truncate">Episode I: The Phantom Menace</span>
            </span>
          </h4>
        </td>
        <td>
          <button class="btn btn-sm btn-secondary" type="button">Download</button>
        </td>
      </tr>
      <tr>
        <td class="table-cell-expand">
          <h4 class="table-list-title">
            <span class="text-truncate-inline">
              <span class="text-truncate">Episode II: Attack of the Clones</span>
            </span>
          </h4>
        </td>
        <td>
          <button class="btn btn-sm btn-secondary" type="button">Download</button>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`ClayTable should render a ClayTable with an schema with label field and items 1`] = `
<div class="table-responsive">
  <table class="table table-autofit table-hover table-list show-quick-actions-on-hover">
    <thead>
      <tr>
        <th class="table-cell-expand">Title</th>
        <th>Status</th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td class="table-cell-expand">
          <h4 class="table-list-title">
            <span class="text-truncate-inline">
              <span class="text-truncate">Episode I: The Phantom Menace</span>
            </span>
          </h4>
        </td>
        <td>
          <span class="label label-secondary">Watched</span>
        </td>
      </tr>
      <tr>
        <td class="table-cell-expand">
          <h4 class="table-list-title">
            <span class="text-truncate-inline">
              <span class="text-truncate">Episode II: Attack of the Clones</span>
            </span>
          </h4>
        </td>
        <td>
          <span class="label label-secondary">Watched</span>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`ClayTable should render a ClayTable with an schema with label field with styles map and items 1`] = `
<div class="table-responsive">
  <table class="table table-autofit table-hover table-list show-quick-actions-on-hover">
    <thead>
      <tr>
        <th class="table-cell-expand">Title</th>
        <th>Status</th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td class="table-cell-expand">
          <h4 class="table-list-title">
            <span class="text-truncate-inline">
              <span class="text-truncate">Episode I: The Phantom Menace</span>
            </span>
          </h4>
        </td>
        <td>
          <span class="label label-danger">Error</span>
        </td>
      </tr>
      <tr>
        <td class="table-cell-expand">
          <h4 class="table-list-title">
            <span class="text-truncate-inline">
              <span class="text-truncate">Episode II: Attack of the Clones</span>
            </span>
          </h4>
        </td>
        <td>
          <span class="label label-success">Watched</span>
        </td>
      </tr>
      <tr>
        <td class="table-cell-expand">
          <h4 class="table-list-title">
            <span class="text-truncate-inline">
              <span class="text-truncate">Episode III: Revenge of the Sith</span>
            </span>
          </h4>
        </td>
        <td>
          <span class="label label-warning">Pending</span>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`ClayTable should render a ClayTable with an schema with link field and items 1`] = `
<div class="table-responsive">
  <table class="table table-autofit table-hover table-list show-quick-actions-on-hover">
    <thead>
      <tr>
        <th class="table-cell-expand">Title</th>
        <th>IMDB</th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td class="table-cell-expand">
          <h4 class="table-list-title">
            <span class="text-truncate-inline">
              <span class="text-truncate">Episode I: The Phantom Menace</span>
            </span>
          </h4>
        </td>
        <td>
          <a class=" text-truncate" href="#phantom">Episode I: The Phantom Menace</a>
        </td>
      </tr>
      <tr>
        <td class="table-cell-expand">
          <h4 class="table-list-title">
            <span class="text-truncate-inline">
              <span class="text-truncate">Episode II: Attack of the Clones</span>
            </span>
          </h4>
        </td>
        <td>
          <a class=" text-truncate" href="#attack">Episode II: Attack of the Clones</a>
        </td>
      </tr>
      <tr>
        <td class="table-cell-expand">
          <h4 class="table-list-title">
            <span class="text-truncate-inline">
              <span class="text-truncate">Episode III: Revenge of the Sith</span>
            </span>
          </h4>
        </td>
        <td>
          <a class=" text-truncate" href="#revenge">Episode III: Revenge of the Sith</a>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`ClayTable should render a ClayTable with an schema with number field and items 1`] = `
<div class="table-responsive">
  <table class="table table-autofit table-hover table-list show-quick-actions-on-hover">
    <thead>
      <tr>
        <th class="table-cell-expand">Title</th>
        <th>Year</th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td class="table-cell-expand">
          <h4 class="table-list-title">
            <span class="text-truncate-inline">
              <span class="text-truncate">Episode I: The Phantom Menace</span>
            </span>
          </h4>
        </td>
        <td class="text-right">1999</td>
      </tr>
      <tr>
        <td class="table-cell-expand">
          <h4 class="table-list-title">
            <span class="text-truncate-inline">
              <span class="text-truncate">Episode II: Attack of the Clones</span>
            </span>
          </h4>
        </td>
        <td class="text-right">2002</td>
      </tr>
      <tr>
        <td class="table-cell-expand">
          <h4 class="table-list-title">
            <span class="text-truncate-inline">
              <span class="text-truncate">Episode III: Revenge of the Sith</span>
            </span>
          </h4>
        </td>
        <td class="text-right">2005</td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`ClayTable should render a ClayTable with an schema with progress bar field and items 1`] = `
<div class="table-responsive">
  <table class="table table-autofit table-hover table-list show-quick-actions-on-hover">
    <thead>
      <tr>
        <th class="table-cell-expand">Title</th>
        <th>Rating</th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td class="table-cell-expand">
          <h4 class="table-list-title">
            <span class="text-truncate-inline">
              <span class="text-truncate">Episode I: The Phantom Menace</span>
            </span>
          </h4>
        </td>
        <td>
          <div class="progress-group progress-info">
            <div class="progress">
              <div aria-valuemax="10" aria-valuemin="0" aria-valuenow="1" class="progress-bar" role="progressbar" style="width: 1%;"></div>
            </div>
            <div class="progress-group-addon">1%</div>
          </div>
        </td>
      </tr>
      <tr>
        <td class="table-cell-expand">
          <h4 class="table-list-title">
            <span class="text-truncate-inline">
              <span class="text-truncate">Episode II: Attack of the Clones</span>
            </span>
          </h4>
        </td>
        <td>
          <div class="progress-group progress-info">
            <div class="progress">
              <div aria-valuemax="10" aria-valuemin="0" aria-valuenow="5" class="progress-bar" role="progressbar" style="width: 5%;"></div>
            </div>
            <div class="progress-group-addon">5%</div>
          </div>
        </td>
      </tr>
      <tr>
        <td class="table-cell-expand">
          <h4 class="table-list-title">
            <span class="text-truncate-inline">
              <span class="text-truncate">Episode III: Revenge of the Sith</span>
            </span>
          </h4>
        </td>
        <td>
          <div class="progress-group progress-info">
            <div class="progress">
              <div aria-valuemax="10" aria-valuemin="0" aria-valuenow="6" class="progress-bar" role="progressbar" style="width: 6%;"></div>
            </div>
            <div class="progress-group-addon">6%</div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`ClayTable should render a ClayTable with an schema, items and action menu 1`] = `
<div class="table-responsive">
  <table class="table table-autofit table-hover table-list show-quick-actions-on-hover">
    <thead>
      <tr>
        <th class="table-cell-expand">Title</th>
        <th></th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td class="table-cell-expand">
          <h4 class="table-list-title">
            <span class="text-truncate-inline">
              <span class="text-truncate">Episode I: The Phantom Menace</span>
            </span>
          </h4>
        </td>
        <td>
          <div class="quick-action-menu"></div>
          <div class="dropdown dropdown-action">
            <button aria-expanded="false" aria-haspopup="true" aria-label="toggle" class="dropdown-toggle btn btn-unstyled">
              <svg aria-hidden="true" class="lexicon-icon lexicon-icon-ellipsis-v">
                <title>ellipsis-v</title>
                <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#ellipsis-v"></use>
              </svg>
            </button>
            <div class="dropdown-menu">
              <ul class="list-unstyled">
                <li>
                  <a class=" dropdown-item" href="#1">Option 1</a>
                </li>
                <li>
                  <a class=" dropdown-item" href="#2">Option 2</a>
                </li>
                <li aria-hidden="true" class="dropdown-divider" role="presentation"></li>
                <li>
                  <a class=" dropdown-item" href="#3">Option 3</a>
                </li>
              </ul>
            </div>
          </div>
        </td>
      </tr>
      <tr>
        <td class="table-cell-expand">
          <h4 class="table-list-title">
            <span class="text-truncate-inline">
              <span class="text-truncate">Episode II: Attack of the Clones</span>
            </span>
          </h4>
        </td>
        <td>
          <div class="quick-action-menu"></div>
          <div class="dropdown dropdown-action">
            <button aria-expanded="false" aria-haspopup="true" aria-label="toggle" class="dropdown-toggle btn btn-unstyled">
              <svg aria-hidden="true" class="lexicon-icon lexicon-icon-ellipsis-v">
                <title>ellipsis-v</title>
                <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#ellipsis-v"></use>
              </svg>
            </button>
            <div class="dropdown-menu">
              <ul class="list-unstyled">
                <li>
                  <a class=" dropdown-item" href="#1">Option 1</a>
                </li>
                <li>
                  <a class=" dropdown-item" href="#2">Option 2</a>
                </li>
                <li aria-hidden="true" class="dropdown-divider" role="presentation"></li>
                <li>
                  <a class=" dropdown-item" href="#3">Option 3</a>
                </li>
              </ul>
            </div>
          </div>
        </td>
      </tr>
      <tr>
        <td class="table-cell-expand">
          <h4 class="table-list-title">
            <span class="text-truncate-inline">
              <span class="text-truncate">Episode III: Revenge of the Sith</span>
            </span>
          </h4>
        </td>
        <td>
          <div class="quick-action-menu"></div>
          <div class="dropdown dropdown-action">
            <button aria-expanded="false" aria-haspopup="true" aria-label="toggle" class="dropdown-toggle btn btn-unstyled">
              <svg aria-hidden="true" class="lexicon-icon lexicon-icon-ellipsis-v">
                <title>ellipsis-v</title>
                <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#ellipsis-v"></use>
              </svg>
            </button>
            <div class="dropdown-menu">
              <ul class="list-unstyled">
                <li>
                  <a class=" dropdown-item" href="#1">Option 1</a>
                </li>
                <li>
                  <a class=" dropdown-item" href="#2">Option 2</a>
                </li>
                <li aria-hidden="true" class="dropdown-divider" role="presentation"></li>
                <li>
                  <a class=" dropdown-item" href="#3">Option 3</a>
                </li>
              </ul>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`ClayTable should render a ClayTable with an schema, items and action menu with quick action items 1`] = `
<div class="table-responsive">
  <table class="table table-autofit table-hover table-list show-quick-actions-on-hover">
    <thead>
      <tr>
        <th class="table-cell-expand">Title</th>
        <th></th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td class="table-cell-expand">
          <h4 class="table-list-title">
            <span class="text-truncate-inline">
              <span class="text-truncate">Episode I: The Phantom Menace</span>
            </span>
          </h4>
        </td>
        <td>
          <div class="quick-action-menu">
            <a class=" quick-action-item" href="#1">
              <svg aria-hidden="true" class="lexicon-icon lexicon-icon-trash">
                <title>trash</title>
                <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#trash"></use>
              </svg>
            </a>
            <a class=" quick-action-item" href="#2">
              <svg aria-hidden="true" class="lexicon-icon lexicon-icon-download">
                <title>download</title>
                <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#download"></use>
              </svg>
            </a>
            <a class=" quick-action-item" href="#3">
              <svg aria-hidden="true" class="lexicon-icon lexicon-icon-info-circle-open">
                <title>info-circle-open</title>
                <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#info-circle-open"></use>
              </svg>
            </a>
          </div>
          <div class="dropdown dropdown-action">
            <button aria-expanded="false" aria-haspopup="true" aria-label="toggle" class="dropdown-toggle btn btn-unstyled">
              <svg aria-hidden="true" class="lexicon-icon lexicon-icon-ellipsis-v">
                <title>ellipsis-v</title>
                <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#ellipsis-v"></use>
              </svg>
            </button>
            <div class="dropdown-menu">
              <ul class="list-unstyled">
                <li>
                  <a class=" dropdown-item" href="#1">Remove</a>
                </li>
                <li>
                  <a class=" dropdown-item" href="#2">Download</a>
                </li>
                <li aria-hidden="true" class="dropdown-divider" role="presentation"></li>
                <li>
                  <a class=" dropdown-item" href="#3">Mark as watched</a>
                </li>
              </ul>
            </div>
          </div>
        </td>
      </tr>
      <tr>
        <td class="table-cell-expand">
          <h4 class="table-list-title">
            <span class="text-truncate-inline">
              <span class="text-truncate">Episode II: Attack of the Clones</span>
            </span>
          </h4>
        </td>
        <td>
          <div class="quick-action-menu">
            <a class=" quick-action-item" href="#1">
              <svg aria-hidden="true" class="lexicon-icon lexicon-icon-trash">
                <title>trash</title>
                <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#trash"></use>
              </svg>
            </a>
            <a class=" quick-action-item" href="#2">
              <svg aria-hidden="true" class="lexicon-icon lexicon-icon-download">
                <title>download</title>
                <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#download"></use>
              </svg>
            </a>
            <a class=" quick-action-item" href="#3">
              <svg aria-hidden="true" class="lexicon-icon lexicon-icon-info-circle-open">
                <title>info-circle-open</title>
                <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#info-circle-open"></use>
              </svg>
            </a>
          </div>
          <div class="dropdown dropdown-action">
            <button aria-expanded="false" aria-haspopup="true" aria-label="toggle" class="dropdown-toggle btn btn-unstyled">
              <svg aria-hidden="true" class="lexicon-icon lexicon-icon-ellipsis-v">
                <title>ellipsis-v</title>
                <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#ellipsis-v"></use>
              </svg>
            </button>
            <div class="dropdown-menu">
              <ul class="list-unstyled">
                <li>
                  <a class=" dropdown-item" href="#1">Remove</a>
                </li>
                <li>
                  <a class=" dropdown-item" href="#2">Download</a>
                </li>
                <li aria-hidden="true" class="dropdown-divider" role="presentation"></li>
                <li>
                  <a class=" dropdown-item" href="#3">Mark as watched</a>
                </li>
              </ul>
            </div>
          </div>
        </td>
      </tr>
      <tr>
        <td class="table-cell-expand">
          <h4 class="table-list-title">
            <span class="text-truncate-inline">
              <span class="text-truncate">Episode III: Revenge of the Sith</span>
            </span>
          </h4>
        </td>
        <td>
          <div class="quick-action-menu">
            <a class=" quick-action-item" href="#1">
              <svg aria-hidden="true" class="lexicon-icon lexicon-icon-trash">
                <title>trash</title>
                <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#trash"></use>
              </svg>
            </a>
            <a class=" quick-action-item" href="#2">
              <svg aria-hidden="true" class="lexicon-icon lexicon-icon-download">
                <title>download</title>
                <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#download"></use>
              </svg>
            </a>
            <a class=" quick-action-item" href="#3">
              <svg aria-hidden="true" class="lexicon-icon lexicon-icon-info-circle-open">
                <title>info-circle-open</title>
                <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#info-circle-open"></use>
              </svg>
            </a>
          </div>
          <div class="dropdown dropdown-action">
            <button aria-expanded="false" aria-haspopup="true" aria-label="toggle" class="dropdown-toggle btn btn-unstyled">
              <svg aria-hidden="true" class="lexicon-icon lexicon-icon-ellipsis-v">
                <title>ellipsis-v</title>
                <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#ellipsis-v"></use>
              </svg>
            </button>
            <div class="dropdown-menu">
              <ul class="list-unstyled">
                <li>
                  <a class=" dropdown-item" href="#1">Remove</a>
                </li>
                <li>
                  <a class=" dropdown-item" href="#2">Download</a>
                </li>
                <li aria-hidden="true" class="dropdown-divider" role="presentation"></li>
                <li>
                  <a class=" dropdown-item" href="#3">Mark as watched</a>
                </li>
              </ul>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`ClayTable should render a ClayTable with classes 1`] = `
<div class="table-responsive my-custom-class">
  <table class="table table-autofit table-hover table-list show-quick-actions-on-hover">
    <thead>
      <tr></tr>
    </thead>
    <tbody></tbody>
  </table>
</div>
`;

exports[`ClayTable should render a ClayTable with id 1`] = `
<div class="table-responsive" id="myId">
  <table class="table table-autofit table-hover table-list show-quick-actions-on-hover">
    <thead>
      <tr></tr>
    </thead>
    <tbody></tbody>
  </table>
</div>
`;

exports[`ClayTable should render a ClayTable with size \`lg\` 1`] = `
<div class="table-responsive-lg">
  <table class="table table-autofit table-hover table-list show-quick-actions-on-hover">
    <thead>
      <tr></tr>
    </thead>
    <tbody></tbody>
  </table>
</div>
`;

exports[`ClayTable should render a ClayTable with size \`md\` 1`] = `
<div class="table-responsive-md">
  <table class="table table-autofit table-hover table-list show-quick-actions-on-hover">
    <thead>
      <tr></tr>
    </thead>
    <tbody></tbody>
  </table>
</div>
`;

exports[`ClayTable should render a ClayTable with size \`sm\` 1`] = `
<div class="table-responsive-sm">
  <table class="table table-autofit table-hover table-list show-quick-actions-on-hover">
    <thead>
      <tr></tr>
    </thead>
    <tbody></tbody>
  </table>
</div>
`;

exports[`ClayTable should render a ClayTable with size \`xl\` 1`] = `
<div class="table-responsive-xl">
  <table class="table table-autofit table-hover table-list show-quick-actions-on-hover">
    <thead>
      <tr></tr>
    </thead>
    <tbody></tbody>
  </table>
</div>
`;

exports[`ClayTable should render a selectable ClayTable with an schema and items 1`] = `
<div class="table-responsive">
  <table class="table table-autofit table-hover table-list show-quick-actions-on-hover">
    <thead>
      <tr>
        <th></th>
        <th class="table-cell-expand">Title</th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          <div class="custom-control custom-checkbox">
            <label>
              <input class="custom-control-input" ref="input" type="checkbox">
              <span class="custom-control-indicator"></span>
              <span class="custom-control-description"></span>
            </label>
          </div>
        </td>
        <td class="table-cell-expand">
          <h4 class="table-list-title">
            <span class="text-truncate-inline">
              <span class="text-truncate">Episode I: The Phantom Menace</span>
            </span>
          </h4>
        </td>
      </tr>
      <tr>
        <td>
          <div class="custom-control custom-checkbox">
            <label>
              <input class="custom-control-input" ref="input" type="checkbox">
              <span class="custom-control-indicator"></span>
              <span class="custom-control-description"></span>
            </label>
          </div>
        </td>
        <td class="table-cell-expand">
          <h4 class="table-list-title">
            <span class="text-truncate-inline">
              <span class="text-truncate">Episode II: Attack of the Clones</span>
            </span>
          </h4>
        </td>
      </tr>
      <tr>
        <td>
          <div class="custom-control custom-checkbox">
            <label>
              <input class="custom-control-input" ref="input" type="checkbox">
              <span class="custom-control-indicator"></span>
              <span class="custom-control-description"></span>
            </label>
          </div>
        </td>
        <td class="table-cell-expand">
          <h4 class="table-list-title">
            <span class="text-truncate-inline">
              <span class="text-truncate">Episode III: Revenge of the Sith</span>
            </span>
          </h4>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`ClayTable should render the default markup 1`] = `
<div class="table-responsive">
  <table class="table table-autofit table-hover table-list show-quick-actions-on-hover">
    <thead>
      <tr></tr>
    </thead>
    <tbody></tbody>
  </table>
</div>
`;

exports[`should render a ClayTable with a basic schema and items and add a class on row focus 1`] = `
<div class="table-responsive">
  <table class="table table-autofit table-hover table-list show-quick-actions-on-hover">
    <thead>
      <tr>
        <th class="table-cell-expand">Title</th>
        <th>Director</th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td class="table-cell-expand">
          <h4 class="table-list-title">
            <span class="text-truncate-inline">
              <span class="text-truncate">Episode I: The Phantom Menace</span>
            </span>
          </h4>
        </td>
        <td>
          <span class="text-truncate">George Lucas</span>
        </td>
      </tr>
      <tr>
        <td class="table-cell-expand">
          <h4 class="table-list-title">
            <span class="text-truncate-inline">
              <span class="text-truncate">Episode II: Attack of the Clones</span>
            </span>
          </h4>
        </td>
        <td>
          <span class="text-truncate">George Lucas</span>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
